<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#EFEFEF">

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:gravity="center"
        android:inputType="textFilter" />

    <Switch
        android:id="@+id/charsUpperSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/charsSwitch"
        android:layout_below="@+id/charsSwitch"
        android:layout_marginTop="21dp"
        android:text="@string/charsUpper" />

    <Switch
        android:id="@+id/numbersSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/charsUpperSwitch"
        android:layout_below="@+id/charsUpperSwitch"
        android:layout_marginTop="21dp"
        android:text="@string/numbers" />

    <Button
        android:id="@+id/advGenerateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/symbolsSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/generateButton" />

    <Switch
        android:id="@+id/symbolsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/numbersSwitch"
        android:layout_below="@+id/numbersSwitch"
        android:layout_marginTop="21dp"
        android:text="@string/symbols" />

    <Switch
        android:id="@+id/charsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password2"
        android:layout_marginRight="17dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/chars" />

    	
    <TextView
        android:id="@+id/passwordLengthTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/charsSwitch"
        android:layout_toLeftOf="@+id/advGenerateButton"
        android:gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:text="@string/pwlength" 
        />

    <NumberPicker
        android:id="@+id/numberPicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLengthTW"
        android:layout_toLeftOf="@+id/advGenerateButton" />
    
</RelativeLayout>
