<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TestFragment" >

    <TextView
        android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/testPwd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
         />

    <EditText
        android:id="@+id/enterPwdET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword" >

    </EditText>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterPwdET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/entropy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/score"
        android:layout_alignBottom="@+id/score"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/score"
        android:text="@string/entropy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/bit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/entropy"
        android:layout_toRightOf="@+id/score"
        android:layout_marginLeft="5dp"
        android:text="@string/bit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>